; ModuleID = '/home/carl/AnghaBench/darwin-xnu/SETUP/config/extr_mkmakefile.c_fl_lookup.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/SETUP/config/extr_mkmakefile.c_fl_lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file_list = type { i32, %struct.file_list* }

@ftab = common dso_local global %struct.file_list* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.file_list* @fl_lookup(i8* %0) #0 {
  %2 = alloca %struct.file_list*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.file_list*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load %struct.file_list*, %struct.file_list** @ftab, align 8
  store %struct.file_list* %5, %struct.file_list** %4, align 8
  br label %6

6:                                                ; preds = %19, %1
  %7 = load %struct.file_list*, %struct.file_list** %4, align 8
  %8 = icmp ne %struct.file_list* %7, null
  br i1 %8, label %9, label %23

9:                                                ; preds = %6
  %10 = load %struct.file_list*, %struct.file_list** %4, align 8
  %11 = getelementptr inbounds %struct.file_list, %struct.file_list* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = load i8*, i8** %3, align 8
  %14 = call i64 @eq(i32 %12, i8* %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %9
  %17 = load %struct.file_list*, %struct.file_list** %4, align 8
  store %struct.file_list* %17, %struct.file_list** %2, align 8
  br label %24

18:                                               ; preds = %9
  br label %19

19:                                               ; preds = %18
  %20 = load %struct.file_list*, %struct.file_list** %4, align 8
  %21 = getelementptr inbounds %struct.file_list, %struct.file_list* %20, i32 0, i32 1
  %22 = load %struct.file_list*, %struct.file_list** %21, align 8
  store %struct.file_list* %22, %struct.file_list** %4, align 8
  br label %6

23:                                               ; preds = %6
  store %struct.file_list* null, %struct.file_list** %2, align 8
  br label %24

24:                                               ; preds = %23, %16
  %25 = load %struct.file_list*, %struct.file_list** %2, align 8
  ret %struct.file_list* %25
}

declare dso_local i64 @eq(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
